tests/run-pass/typeck/use-const.rs
const VALUE: int = 0;

fn main() {
    let a: int = VALUE;
}