tests/compile-fail/semck/redeclare-const.rs
const NAME: int = 0;
static NAME: int = 0;  //! ERROR(2:1): cannot redeclare `NAME`

fn main() {}